# arx-engine

./: .env.example  .gitignore  ARCHITECTURE.md  CHECKLIST.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DOCKER.md  Dockerfile  Dockerfile.frontend  Dockerfile.gpu  Dockerfile.prod  IMPLEMENTATION.md  OPTIMIZATION_SUMMARY.md  QUICKSTART.md  README.md  SECURITY_SUMMARY.md  check_gpu.sh  compose.gpu-nvidia.yaml  compose.prod.yaml  compose.yaml  deploy.sh  nginx.conf  rules.md  server.md  setup-server.sh  test_performance.sh  validate-setup.sh
.github/instructions/: piece_encoding.instructions.md  rules.md
.github/workflows/: deploy.yml
examples/: engine_demo.rs
public/: app.js  index.html
src/: board.rs  cli_rendering.rs  game.rs  gpu_compute.rs  lib.rs  main.rs  server.rs  tui.rs
src/engine/: README.md  gpu_batch_sim.rs  gpu_context.rs  gpu_move_gen.rs  mod.rs
src/engine/shaders/: batch_simulation.wgsl  move_generation.wgsl
